# AlfaTest

./: CMakeLists.txt  Graph.h  Graph.ut.cpp  main.cpp  Альфа-Банк. Тестовое задание.docx
